--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1214,3 +1214,58 @@ section {
 #footer .credits {
   font-size: 13px;
 }
+.accordion-button{
+  font-size: 18px;
+  padding: 10px 0;
+  margin: 0;
+  text-transform: uppercase;
+  display: block;
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
+  color: #FFF;
+  background-color: #0678e3;
+  position: relative;
+  padding-left: 20px;
+  
+}
+.accordion-button:focus {
+border-color:  #0678e3!important;
+z-index: 0;
+box-shadow: none;
+color: #FFF;
+}
+.accordion-body{
+  color: #000;
+  border: 1px solid #0678e3;
+}
+.accordion-button:not(.collapsed){
+background: #0563bb;
+color: white;
+}
+.accordion-button::after{
+background-image: none!important;
+}
+.accordion-button::after{
+border: solid #FFF;
+border-width: 0px 2px 2px 0px;
+width: 10px;
+height: 10px;
+transform: rotate(45deg);
+position: absolute;
+right: 10px;
+top: 12px;
+}
+.accordion-button:not(.collapsed)::after{
+border: 2px solid white;
+border-width: 0px 3px 3px 0px;
+width: 10px;
+height: 10px;
+transform: rotate(-135deg);
+position: absolute;
+left: 0px;
+top: 18px;
+}
+.accordion-item{
+border: none;
+margin: 10px 0px;
+}
